solar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-system
  labels:
    app: solar-system-deploy
  namespace: solar-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solar-system 
  template:
    metadata:
      name: solar-system
      labels:
        app: solar-system
    spec:
      containers:
        - name: solar-container
          image: chowdary2001/solar-system:latest
          ports:
            - containerPort: 3000
              name: http
