solar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-service
  namespace: solar-system
spec:
  type: ClusterIP
  selector:
    app: solar-system
  ports:
    - port: 80
      targetPort: 3000
